BSA-72 fix: align `qti-content` by putting it back into the render flow, applying `position: relative`

--- a/scss/inc/_test-layout.scss
+++ b/scss/inc/_test-layout.scss
@@ -120,7 +120,7 @@
         max-width: map-get($widths, item-max-width) * 1px;
         width: 100%;
         margin: auto;
-        position: absolute;
+        position: relative;
         z-index: 1;
     }
 
